mejoras en el grid responsive

--- a/index.html
+++ b/index.html
@@ -4,38 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taller de flexbox</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <nav></nav>
-    <main>
-        <section>
+    <div class="contenedor-padre">
+        <div class="columna-izquierda">
             <h1>titulo</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci minus quis dolores, laudantium ut labore reprehenderit nemo consequatur odio tenetur, molestiae mollitia, perspiciatis voluptates eaque aspernatur nulla dicta sed tempora voluptatem et facere cupiditate? Ea ipsam dolorum eos reprehenderit sunt temporibus beatae iste a! Explicabo vel a alias rerum corrupti facere perspiciatis reprehenderit ullam modi in repudiandae itaque magni quas corporis obcaecati consequatur saepe omnis, quisquam reiciendis eum quos magnam impedit. Quis beatae in neque cum quod expedita, quibusdam ratione maiores. Natus harum porro illum reiciendis deserunt repellendus perspiciatis necessitatibus architecto voluptate autem accusantium, similique nobis provident magnam minima veniam accusamus eligendi nemo voluptatum sit sunt doloribus ad explicabo a. Velit atque, nesciunt cumque labore at dolor non expedita possimus quod animi nisi unde delectus corporis dolore nihil? Consequatur maxime dolor culpa inventore? Quibusdam, consectetur cumque amet necessitatibus ipsum nemo et dolor nisi nobis doloremque velit iusto eveniet, accusamus deleniti cum dicta aliquam sit nulla quod error veniam soluta non? Rem incidunt necessitatibus non aut, laudantium a aliquid commodi facere cumque iusto voluptatibus odit ducimus quo hic? Beatae repudiandae odio quisquam iusto tempore, omnis commodi dicta architecto ut necessitatibus blanditiis. Itaque quo natus ipsa doloribus nihil, non aut ipsum molestiae excepturi voluptatum aliquam sunt corrupti officiis modi adipisci reiciendis voluptate impedit delectus maxime perspiciatis, iure qui! Exercitationem, sit quisquam odit, repellendus dolorum aspernatur autem vero facere unde aperiam dignissimos expedita incidunt quo vel maxime consectetur ad voluptatibus nam quae, at accusantium nesciunt. Ex voluptates nulla tenetur atque, libero in alias, doloremque similique error velit blanditiis excepturi consequuntur accusantium nemo itaque iure suscipit voluptate deserunt ab necessitatibus illo? Consequuntur veniam laborum dicta? Vitae blanditiis itaque cumque consectetur. Esse blanditiis hic vitae ullam quibusdam porro cupiditate voluptas. Quos magni corrupti iure ducimus error rem accusamus et nisi autem non, nostrum tempora assumenda quaerat quo nulla voluptatibus. Quos, tempore accusamus delectus pariatur deleniti omnis sequi. Debitis ut, at fugit nihil quae odio adipisci, voluptate iste sapiente quisquam dicta, id recusandae architecto voluptatibus animi qui est voluptas obcaecati quam sed. Dolore, atque obcaecati dignissimos soluta, necessitatibus ipsum assumenda, aliquam illum aperiam non doloremque hic quod officia ea pariatur! Ullam quos deleniti quae provident magni iusto laudantium impedit ex inventore fugit reiciendis ipsum, nobis dolorum, mollitia in pariatur illo aperiam laborum nulla. Perspiciatis sed voluptas excepturi provident quidem ratione molestiae repellat! Enim illum, exercitationem, aspernatur soluta nam sequi facere doloribus excepturi id, quia non amet.</p>
-        </section>
-        <section class="padre">
-            <section class="hijo" class="diseno_hijo"><img src="img/1.jpg" alt="imagen 1"></section>
-            <section class="hijo" class="diseno_hijo"><img src="img/2.jpg" alt="imagen 2"></section>
-            <section class="hijo" class="diseno_hijo"><img src="img/3.jpg" alt="imagen 3"></section>
-            <section class="hijo" class="diseno_hijo"><img src="img/4.jpg" alt="imagen 4"></section>
-            <section class="hijo" class="diseno_hijo"><img src="img/5.jpg" alt="imagen 5"></section>
-            <section class="hijo" class="diseno_hijo"><img src="img/6.jpg" alt="imagen 6"></section>
-            <section class="hijo" class="diseno_hijo"><img src="img/7.jpg" alt="imagen 7"></section>
-            <section class="hijo" class="diseno_hijo"><img src="img/8.jpg" alt="imagen 8"></section>
-            <section class="hijo" class="diseno_hijo"><img src="img/9.jpg" alt="imagen 9"></section>
-            <section class="hijo" class="diseno_hijo"><img src="img/10.jpg" alt="imagen 10"></section>
-            <section class="hijo" class="diseno_hijo"><img src="img/11.jpg" alt="imagen 11"></section>
-            <section class="hijo" class="diseno_hijo"><img src="img/12.jpg" alt="imagen 12"></section>
-        </section>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi repudiandae ex tempore facere. Architecto nemo ut voluptatem reiciendis dolorum pariatur velit recusandae laboriosam rerum consequuntur. Quisquam earum natus impedit dignissimos incidunt iste enim ipsum. Consequatur, debitis. Magni maiores, odit ab nisi dolore numquam fugiat et doloremque sint quibusdam ex voluptate aperiam esse commodi velit delectus. Accusantium quae illum consectetur vitae illo atque ducimus inventore quidem et omnis dolorum incidunt autem distinctio accusamus laborum quaerat maxime, vel alias officia quasi eveniet dolores amet. At officia nihil dolore earum, blanditiis laudantium beatae hic inventore, distinctio ipsam perferendis unde expedita consequatur! Placeat delectus sequi unde nobis. Tempora quaerat dolores iure saepe veniam distinctio nihil placeat laboriosam quisquam quis! Ratione accusamus, voluptatem, sapiente eos molestias quam repellendus voluptate omnis, nam ex mollitia. Aspernatur nihil reprehenderit amet praesentium nemo placeat dolorum ipsam fugit quasi consequuntur repellat facilis, error voluptatibus voluptas mollitia, fugiat, velit sapiente modi esse. Optio, laborum delectus, corporis dolores maiores expedita adipisci, blanditiis consequatur eligendi accusantium quidem explicabo ad maxime beatae? Rerum labore quae eligendi harum. Dicta deserunt, nesciunt aut quaerat minima cum numquam a repellat ipsa officia suscipit consectetur animi odio at ipsum? Repellendus dolor atque ea! Veniam debitis alias deserunt atque ipsa maxime, voluptatibus eveniet impedit obcaecati adipisci. Tenetur neque nam inventore perferendis commodi, quidem veniam id est reiciendis dolorem quas corporis assumenda! Velit autem inventore aut debitis corporis laudantium consequatur maxime sit unde adipisci vero, voluptatibus hic saepe recusandae nihil exercitationem optio? Eveniet, laboriosam numquam officiis deserunt illo corporis blanditiis cupiditate aspernatur voluptate qui provident! Rerum blanditiis accusantium ab veritatis itaque officiis laudantium tempora, cum consequuntur eos nostrum maxime libero odio porro laborum tenetur ea vero possimus quam voluptates nihil beatae nobis. Illum expedita iusto, magni voluptatum in asperiores reiciendis perspiciatis porro deleniti. Eos consequatur quam possimus laudantium inventore reiciendis veritatis iusto similique, earum deleniti voluptates tempora fugiat quae molestias accusantium nesciunt eveniet saepe repellendus quaerat impedit! Similique, inventore asperiores. Consequatur cum vel soluta, facere nemo nesciunt suscipit totam temporibus voluptate ratione, neque est. Ad non molestiae quo repudiandae officia nesciunt commodi illo, earum fugiat tempore totam dolorem nisi, nemo dolor vitae itaque neque, soluta beatae! Nihil animi optio omnis illum ullam provident dolorem esse veritatis eos amet officiis reiciendis eius iusto corporis modi eveniet accusantium qui, cumque debitis deserunt hic magnam dolores! Libero voluptatem, vitae vel a deleniti recusandae rem eveniet accusantium aliquam, delectus iusto perferendis commodi, quis ducimus.</p>
+        </div>
+        <div class="columna-derecha">
+          <div class="grid-container">
+            <img src="img/1.jpg" alt="Imagen 1">
+            <img src="img/2.jpg" alt="Imagen 2">
+            <img src="img/3.jpg" alt="Imagen 3">
+            <img src="img/4.jpg" alt="Imagen 4">
+            <img src="img/5.jpg" alt="Imagen 5">
+            <img src="img/6.jpg" alt="Imagen 6">
+            <img src="img/7.jpg" alt="Imagen 7">
+            <img src="img/8.jpg" alt="Imagen 8">
+            <img src="img/9.jpg" alt="Imagen 9">
+            <img src="img/10.jpg" alt="Imagen 10">
+            <img src="img/11.jpg" alt="Imagen 11">
+            <img src="img/12.jpg" alt="Imagen 12">
+          </div>
+        </div>
+      </div>
+       
 
-
-
-
-
-        </section>
-    </main>
-    <footer></footer>
-    
 </body>
 </html>
