--- a/index.html
+++ b/index.html
@@ -1,36 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    <div class="contenedor-padre">
-        <div class="columna-izquierda">
-            <h1>titulo</h1>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi repudiandae ex tempore facere. Architecto nemo ut voluptatem reiciendis dolorum pariatur velit recusandae laboriosam rerum consequuntur. Quisquam earum natus impedit dignissimos incidunt iste enim ipsum. Consequatur, debitis. Magni maiores, odit ab nisi dolore numquam fugiat et doloremque sint quibusdam ex voluptate aperiam esse commodi velit delectus. Accusantium quae illum consectetur vitae illo atque ducimus inventore quidem et omnis dolorum incidunt autem distinctio accusamus laborum quaerat maxime, vel alias officia quasi eveniet dolores amet. At officia nihil dolore earum, blanditiis laudantium beatae hic inventore, distinctio ipsam perferendis unde expedita consequatur! Placeat delectus sequi unde nobis. Tempora quaerat dolores iure saepe veniam distinctio nihil placeat laboriosam quisquam quis! Ratione accusamus, voluptatem, sapiente eos molestias quam repellendus voluptate omnis, nam ex mollitia. Aspernatur nihil reprehenderit amet praesentium nemo placeat dolorum ipsam fugit quasi consequuntur repellat facilis, error voluptatibus voluptas mollitia, fugiat, velit sapiente modi esse. Optio, laborum delectus, corporis dolores maiores expedita adipisci, blanditiis consequatur eligendi accusantium quidem explicabo ad maxime beatae? Rerum labore quae eligendi harum. Dicta deserunt, nesciunt aut quaerat minima cum numquam a repellat ipsa officia suscipit consectetur animi odio at ipsum? Repellendus dolor atque ea! Veniam debitis alias deserunt atque ipsa maxime, voluptatibus eveniet impedit obcaecati adipisci. Tenetur neque nam inventore perferendis commodi, quidem veniam id est reiciendis dolorem quas corporis assumenda! Velit autem inventore aut debitis corporis laudantium consequatur maxime sit unde adipisci vero, voluptatibus hic saepe recusandae nihil exercitationem optio? Eveniet, laboriosam numquam officiis deserunt illo corporis blanditiis cupiditate aspernatur voluptate qui provident! Rerum blanditiis accusantium ab veritatis itaque officiis laudantium tempora, cum consequuntur eos nostrum maxime libero odio porro laborum tenetur ea vero possimus quam voluptates nihil beatae nobis. Illum expedita iusto, magni voluptatum in asperiores reiciendis perspiciatis porro deleniti. Eos consequatur quam possimus laudantium inventore reiciendis veritatis iusto similique, earum deleniti voluptates tempora fugiat quae molestias accusantium nesciunt eveniet saepe repellendus quaerat impedit! Similique, inventore asperiores. Consequatur cum vel soluta, facere nemo nesciunt suscipit totam temporibus voluptate ratione, neque est. Ad non molestiae quo repudiandae officia nesciunt commodi illo, earum fugiat tempore totam dolorem nisi, nemo dolor vitae itaque neque, soluta beatae! Nihil animi optio omnis illum ullam provident dolorem esse veritatis eos amet officiis reiciendis eius iusto corporis modi eveniet accusantium qui, cumque debitis deserunt hic magnam dolores! Libero voluptatem, vitae vel a deleniti recusandae rem eveniet accusantium aliquam, delectus iusto perferendis commodi, quis ducimus.</p>
-        </div>
-        <div class="columna-derecha">
-          <div class="grid-container">
-            <img src="img/1.jpg" alt="Imagen 1">
-            <img src="img/2.jpg" alt="Imagen 2">
-            <img src="img/3.jpg" alt="Imagen 3">
-            <img src="img/4.jpg" alt="Imagen 4">
-            <img src="img/5.jpg" alt="Imagen 5">
-            <img src="img/6.jpg" alt="Imagen 6">
-            <img src="img/7.jpg" alt="Imagen 7">
-            <img src="img/8.jpg" alt="Imagen 8">
-            <img src="img/9.jpg" alt="Imagen 9">
-            <img src="img/10.jpg" alt="Imagen 10">
-            <img src="img/11.jpg" alt="Imagen 11">
-            <img src="img/12.jpg" alt="Imagen 12">
-          </div>
-        </div>
-      </div>
-       
 
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
+
+<body>
+  <nav>
+    <section class="padre_nav">
+      <section class="logo">
+        <img src="img/logo.png" alt="logo" />
+      </section>
+      <section class="menu">
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">multimedia</a></li>
+          <li><a href="#">contactanos</a></li>
+        </ul>
+      </section>
+    </section>
+  </nav>
+
+  <main>
+    <section class="contenedor-padre">
+      <section class="columna-izquierda">
+        <h1>titulo</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex deserunt
+          iste sed! Praesentium nemo omnis labore excepturi temporibus facilis
+          laborum quidem rem eaque aliquid consequuntur perferendis itaque
+          quos laboriosam repellendus voluptatem, ipsam modi sit
+          necessitatibus a ullam. Nisi quas nulla distinctio nostrum minus!
+          Sed, quam ipsam? Ipsam quaerat dolore sed, in molestiae repellendus
+          esse consequatur. Dicta consectetur vel ratione doloribus nam
+          eveniet ipsa, in alias illum, sunt qui totam. Consequuntur, ipsam
+          iure dignissimos magnam hic nobis labore, atque sit doloribus ipsum
+          blanditiis repellendus harum neque expedita. Officiis quis unde
+          pariatur non explicabo esse delectus, alias soluta distinctio
+          praesentium, autem, recusandae dignissimos illum tempore itaque
+          numquam adipisci ex omnis nobis aut assumenda! Ut, autem, hic
+          doloribus cupiditate, vero voluptates veritatis aliquam quaerat
+          illum eum fuga. Qui minus amet itaque aperiam, dolores quaerat modi
+          provident. Unde recusandae fugit repellat laboriosam commodi error
+          ad similique, officiis impedit natus! Non sapiente enim pariatur
+          itaque voluptates ipsa iure obcaecati alias. Mollitia illum ipsam
+          dicta vitae eius culpa nulla atque sequi harum alias nobis qui ea
+          impedit voluptate, placeat, at velit. Praesentium odio autem
+          aspernatur optio nemo, alias, tempore earum distinctio neque tempora
+          omnis. Quas distinctio obcaecati, quis iure ea possimus similique
+          assumenda maxime. Numquam reprehenderit facilis eaque. Corrupti
+          omnis similique ut nulla fuga! Nulla quis dicta voluptatibus
+          accusamus autem dolore natus reprehenderit dolores amet a possimus
+          minima adipisci eius sequi distinctio iusto corporis, unde vel?
+          Quaerat at aliquam laudantium, rerum obcaecati autem consectetur rem
+          odit.
+        </p>
+      </section>
+      <section class="columna-derecha grid-container">
+        <img src="img/1.jpg" alt="Imagen 1" />
+        <img src="img/2.jpg" alt="Imagen 2" />
+        <img src="img/3.jpg" alt="Imagen 3" />
+        <img src="img/4.jpg" alt="Imagen 4" />
+        <img src="img/5.jpg" alt="Imagen 5" />
+        <img src="img/6.jpg" alt="Imagen 6" />
+        <img src="img/7.jpg" alt="Imagen 7" />
+        <img src="img/8.jpg" alt="Imagen 8" />
+        <img src="img/9.jpg" alt="Imagen 9" />
+        <img src="img/10.jpg" alt="Imagen 10" />
+        <img src="img/11.jpg" alt="Imagen 11" />
+        <img src="img/12.jpg" alt="Imagen 12" />
+      </section>
+    </section>
+  </main>
 </body>
+
 </html>
