se agrega otras paginas

--- a/contactenos.html
+++ b/contactenos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>multimedia</title>
-    <link rel="stylesheet" href="css/stylesmulti.css" />
+    <title>Contactenos</title>
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
     <nav>
@@ -21,24 +21,7 @@
             </ul>
           </section>
         </section>
-    </nav>
-
+      </nav>
+    
 </body>
-<div class="contenedor-padre">
-    <div class="hijo">
-      <div class="izquierda"><img src="img/1.jpg" alt=""></div>
-      <div class="derecha"><img src="img/2.jpg" alt=""></div>
-    </div>
-    <div class="hijo"></div>
-    <div class="hijo">
-      <div class="izquierda"></div>
-      <div class="derecha"></div>
-    </div>
-    <div class="hijo"></div>
-    <div class="hijo">
-      <div class="izquierda"></div>
-      <div class="derecha"></div>
-    </div>
-  </div>
-  
 </html>
