--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Block Motero</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 
@@ -17,8 +17,8 @@
       </section>
       <section class="menu">
         <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">multimedia</a></li>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="multimedia.html">multimedia</a></li>
           <li><a href="#">contactanos</a></li>
         </ul>
       </section>
@@ -28,36 +28,41 @@
   <main>
     <section class="contenedor-padre">
       <section class="columna-izquierda">
-        <h1>titulo</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex deserunt
-          iste sed! Praesentium nemo omnis labore excepturi temporibus facilis
-          laborum quidem rem eaque aliquid consequuntur perferendis itaque
-          quos laboriosam repellendus voluptatem, ipsam modi sit
-          necessitatibus a ullam. Nisi quas nulla distinctio nostrum minus!
-          Sed, quam ipsam? Ipsam quaerat dolore sed, in molestiae repellendus
-          esse consequatur. Dicta consectetur vel ratione doloribus nam
-          eveniet ipsa, in alias illum, sunt qui totam. Consequuntur, ipsam
-          iure dignissimos magnam hic nobis labore, atque sit doloribus ipsum
-          blanditiis repellendus harum neque expedita. Officiis quis unde
-          pariatur non explicabo esse delectus, alias soluta distinctio
-          praesentium, autem, recusandae dignissimos illum tempore itaque
-          numquam adipisci ex omnis nobis aut assumenda! Ut, autem, hic
-          doloribus cupiditate, vero voluptates veritatis aliquam quaerat
-          illum eum fuga. Qui minus amet itaque aperiam, dolores quaerat modi
-          provident. Unde recusandae fugit repellat laboriosam commodi error
-          ad similique, officiis impedit natus! Non sapiente enim pariatur
-          itaque voluptates ipsa iure obcaecati alias. Mollitia illum ipsam
-          dicta vitae eius culpa nulla atque sequi harum alias nobis qui ea
-          impedit voluptate, placeat, at velit. Praesentium odio autem
-          aspernatur optio nemo, alias, tempore earum distinctio neque tempora
-          omnis. Quas distinctio obcaecati, quis iure ea possimus similique
-          assumenda maxime. Numquam reprehenderit facilis eaque. Corrupti
-          omnis similique ut nulla fuga! Nulla quis dicta voluptatibus
-          accusamus autem dolore natus reprehenderit dolores amet a possimus
-          minima adipisci eius sequi distinctio iusto corporis, unde vel?
-          Quaerat at aliquam laudantium, rerum obcaecati autem consectetur rem
-          odit.
+        <h1>Block Motero</h1>
+        <p>Las motocicletas son una forma emocionante y liberadora de moverse por la carretera, y existen muchos modelos
+          diferentes que se adaptan a las necesidades y preferencias de cada persona. En este ensayo, exploraremos doce
+          modelos de motocicletas, cada uno con sus características únicas y atractivas. <br>
+          Empecemos con la Ducati Panigale V4, una moto de carreras de alta gama con un motor de cuatro cilindros en V y
+          214 caballos de fuerza. Esta moto es perfecta para aquellos que buscan una experiencia de conducción
+          emocionante y desafiante. <br>
+          Otra moto emocionante es la Honda CBR1000RR, que es una moto deportiva que ha sido diseñada para la velocidad
+          y la maniobrabilidad. Con un motor de cuatro cilindros en línea y 191 caballos de fuerza, esta moto es una
+          bestia en la carretera. <br>
+          La Yamaha YZF-R1 es otra moto deportiva de alta gama con un motor de cuatro cilindros en línea y 200 caballos
+          de fuerza. Esta moto ha sido diseñada para competir en carreras y ha sido un éxito en los circuitos de
+          carreras de todo el mundo. <br>
+          Para aquellos que buscan una moto de turismo, la BMW R 1250 RT es una excelente opción. Esta moto cuenta con
+          un motor bóxer de dos cilindros y 136 caballos de fuerza, y ha sido diseñada para hacer viajes largos de
+          manera cómoda y eficiente. <br>
+          La Harley-Davidson Softail es una moto clásica y atemporal que ha sido popular durante décadas. Con un motor
+          Milwaukee-Eight de cuatro cilindros y 114 caballos de fuerza, esta moto es conocida por su potencia y su
+          estilo clásico. <br>
+          La Indian Scout Bobber es otra moto clásica y elegante con un motor V-Twin de dos cilindros y 100 caballos de
+          fuerza. Esta moto cuenta con un diseño elegante y moderno, y es una excelente opción para aquellos que buscan
+          un estilo clásico con un toque moderno. <br>
+          La Kawasaki Ninja H2 SX es una moto deportiva de alta gama con un motor de cuatro cilindros en línea y 197
+          caballos de fuerza. Esta moto cuenta con tecnología de sobrealimentación y es conocida por su velocidad y
+          potencia. <br>
+          La KTM 1290 Super Duke GT es una moto de turismo de alta gama con un motor V-Twin de dos cilindros y 175
+          caballos de fuerza. Esta moto cuenta con características avanzadas como control de crucero y modos de
+          conducción personalizados. <br>
+          La Suzuki GSX-R1000R es otra moto deportiva de alta gama con un motor de cuatro cilindros en línea y 199
+          caballos de fuerza. Esta moto ha sido diseñada para la velocidad y la maniobrabilidad, y es una opción popular
+          entre los corredores de carreras. <br>
+          La Triumph Bonneville T120 es una moto clásica y elegante con un motor bóxer de dos cilindros y 79 caballos de
+          fuerza. Esta moto es conocida por su estilo clásico y su manejo suave y cómodo.
+          La Vespa GTS Super es una moto scooter elegante y moderna con un motor de un solo cilindro y 23 caballos de
+          fuerza. Esta moto es una excelente opción para aquellos que buscan una forma
         </p>
       </section>
       <section class="columna-derecha grid-container">
